tests/multiubuntu/test-cases/TC_35/TC_35_ingress_egress_toEntities_fromEntities_remote_node.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-rqtfrdqqvfexfgn
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-3
      group: group-1
  egress:
  - toEntities:
    - unknown
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-lzrrkamwepbfnzw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-3
      group: group-1
  ingress:
  - fromEntities:
    - unknown
---
